# OpenEnv

./: Dockerfile  README.md  inference.py  pyproject.toml
openenv_farm/: __init__.py  config.py  inference.py  main.py  openenv.yaml  requirements.txt  test_tasks.py
openenv_farm/api/: __init__.py  server.py
openenv_farm/env/: __init__.py  dynamics.py  farm_env.py  models.py  reward.py  utils.py  weather.py
openenv_farm/graders/: __init__.py  profit_grader.py  sustainability_grader.py  yield_grader.py
openenv_farm/openenv_farm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openenv_farm/server/: app.py
openenv_farm/tasks/: __init__.py  easy.py  hard.py  medium.py
server/: app.py
